--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,4 +2,29 @@
   display: flex;
   background-color: white;
   width: 100%;
+  max-width: 500px;
+  justify-content: space-between;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+  gap: 13px;
+  padding-right: 13px;
+}
+
+.search_input {
+  padding: 13px;
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  font-size: 0.8rem;
+  font-weight: 500;
+  border-right: 1px solid #ddd;
+}
+
+.search_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  font-size: 1rem;
+  background: transparent;
+  color: #333;
 }
