--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,4 +1,5 @@
 .product-card {
+  position: relative;
   width: 100%;
   max-width: 300px;
   background-color: white;
@@ -29,4 +30,32 @@
   color: rgba(0, 0, 0, 0.5);
   line-height: 1.5;
   font-weight: 500;
+}
+
+.button__add-card {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 45px;
+  height: 45px;
+  margin: 12px 15px;
+  color: #0c5dd6;
+  border: none;
+  background: transparent;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: all 1s;
+}
+
+.product-card:hover {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  transition: all 1s;
+}
+
+.product-card:hover .button__add-card {
+  display: flex;
+  transition: all 1s;
 }
