--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -7,5 +7,23 @@
   top: 0;
   right: 0;
   padding: 120px 20px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+.cart-items {
+  flex-grow: 1;
+  overflow-y: auto;
+}
+
+.cart-resume {
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding: 35px 0 15px;
+  border-bottom: 1px solid #ddd;
+}
+
+.cart-items .cart-item:last-child {
+  border-bottom: none;
 }
